--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
-  "name": "lec6",
+  "name": "project",
   "version": "1.0.0",
   "description": "",
-  "types": "module",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
   "devDependencies": {
     "nodemon": "^3.1.14",
     "prettier": "^3.8.1"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.6",
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
-    "mongodb": "^7.1.0",
-    "mongoose": "^9.2.3"
+    "mongoose": "^9.2.1"
   }
 }
